--- a/src/components/Homepage/Card.css
+++ b/src/components/Homepage/Card.css
@@ -1,9 +1,17 @@
+.cards-container{
+    padding: 10px;
+    /* top | right | bottom | left */
+    margin: 0 250px 0 250px;
+    display: grid;
+    gap: 4px;
+    grid-template-columns: repeat(auto-fit, minmax(450px,1fr));
+}
+
 .card{
     cursor: pointer;
-    padding: 12px;
-    margin-bottom: 14px;
-    background-color: #F5F5F5;
-    width: 590px;
+    padding: 10px;
+    background-color: #ffffff;
+    width: 440px;
     height: 180px;
     box-shadow: 5px 10px 18px #888888;
 }
@@ -11,23 +19,39 @@
 .title{
     margin: 0;
     margin-left: 140px;
-    font-size: 18px;
-    font-family: sans-serif;
+    font-size: 20px;
+    font-family: Courier, monospace;
 }
 
 .authorName{
     margin: 0;
+    font-size: medium;
     font-weight:normal;
-    margin-left: 180px;
+    margin-left: 140px;
 }
 
 .bookCover{
     float: left;
     width: 122px;
     height: 180px;
+    border-radius: 10px;
     box-shadow: 0px 4px  4px #000000;
 }
 
 .star{
-    margin-left: 150px;
+    margin-left: 140px;
+}
+
+@media only screen and (max-device-width: 480px) {
+
+    .cards-container{
+        margin: 0;
+        padding: 10px;
+        display: block;
+    }
+    .card{
+        max-width: 100%;
+        margin-bottom: 1px;
+        width: auto;
+    }
 }
