--- a/src/components/Homepage/Header.css
+++ b/src/components/Homepage/Header.css
@@ -1,4 +1,20 @@
-.head{
+.head h1{
+    box-shadow: 1px 2px 5px rgb(0, 0, 0);
+    font-family: 'Bebas Neue', cursive;
+    font-weight:normal;
+    font-size: 35px;
+    /* offset-x | offset-y | blur-radius | color */
+    text-shadow: 2px 3px 2px white ;
+    width: 100%;
+    height: 60px;
+    padding-top: 15px;
+    background-color: rgb(156, 191, 255);
+    margin: 0;
     text-align: center;
-    margin: 50px;
+}
+
+@media only screen and (max-device-width: 480px) {
+    .head h1{
+        font-size: 30px;
+    }
 }
