--- a/src/components/SpecificBook/specific.css
+++ b/src/components/SpecificBook/specific.css
@@ -1,8 +1,11 @@
 .book-detail{
-    background-color: aliceblue;
-    width: 900px;
+    /* top | right | bottom | left */
+    margin: 20px 5% 0 5%;
+    width: auto;
+    background-color: rgb(255, 255, 255);
     padding: 20px;
     border-radius: 20px;
+    box-shadow: 10px 10px 30px #000000;
 }
 
 .book-cover{
@@ -32,41 +35,36 @@
     margin-left: 435px;
 }
 
+form{
+    margin-left: 300px;
+    /* box-sizing: border-box; */
+}
+
 .comment-header{
     margin-top: 130px;
-    margin-left: 300px;
+    /* margin-left: 300px; */
     display: flex;
     justify-content: space-between;
 }
-
 textarea{
-    width : 600px;
+    resize: none;
+    width: 100%;
     height: 100px;
     padding: 10px;
-    /* top | right | bottom | left */
-    margin: 8px 0px 0px 20px;
     box-sizing: border-box;
     border: 2px solid #555;
     border-radius: 10px;
-  }
-
-  #comment{
-      font-size: 20px;
-  }
-  #new-rating{
-    padding: 0;
-  }
-  
-.single-comment{
-    margin-top: 15px;
-    padding: 30px 20px;
-    background-color:wheat;
-    border-radius: 20px;
 }
 
-  #add {
+#comment{
+    font-size: 20px;
+}
+#new-rating{
+    padding: 0;
+}
+  
+#add {
     margin-top: 10px;
-    margin-left: 530px;
     color: #090909;
     padding: 11.2px 27.2px;
     font-size: 18px;
@@ -75,10 +73,22 @@ textarea{
     border: 1px solid #e8e8e8;
     transition: all .1s;
     box-shadow: 6px 6px 12px #c5c5c5,-6px -6px 12px #ffffff;
-   }
+}
    
      
-   #add:active {
-    box-shadow: 4px 4px 12px #c5c5c5, -4px -4px 12px #ffffff;
-   }
+#add:active {
+    box-shadow: 4px 4px 12px #c5c5c5, -4px -4px 12px #ffffff;   
+}
+
+
+.single-comment{
+    
+    font-size: 20px;
+    margin-top: 20px;
+    padding: 30px 20px;
+    background-color:rgb(224, 224, 224);
+    border-radius: 20px;
+    box-shadow: 4px 4px 12px #c5c5c5;   
+
+}
 
