--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
 body {
-  background-color: #C4C4C4;
-  display: flex;
-  justify-content: center;
-  margin: auto;
+  margin: 0;
+  background-color: #ffffff;
 }
