--- a/src/components/Homepage/Card.css
+++ b/src/components/Homepage/Card.css
@@ -10,10 +10,17 @@
 .card{
     cursor: pointer;
     padding: 10px;
-    background-color: #ffffff;
+    background-color: #fffbfb;
     width: 440px;
     height: 180px;
-    box-shadow: 5px 10px 18px #888888;
+    box-shadow: 0px 2px 4px #888888;
+   /* box-shadow: rgba(0, 0, 0, 0.06) 0px 2px 4px; */ 
+    transition: all .2s;
+}
+.card:hover{
+    /* box-shadow: 5px 10px 18px #464646; */
+    box-shadow: rgba(0, 0, 0, 0.22) 0px 19px 43px;
+    transform: translate3d(0px, -1px, 0px);
 }
 
 .title{
@@ -42,7 +49,7 @@
     margin-left: 140px;
 }
 
-@media only screen and (max-device-width: 480px) {
+@media only screen and (max-device-width: 780px) {
 
     .cards-container{
         margin: 0;
